samples/_failures_safe/1761255223_6d3d50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26b28840.c: In function ‘main’:
./samples/SAFE/__tmp_26b28840.c:182:9: error: expected expression at end of input
  182 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_26b28840.c:182:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_26b28840.c:182:9: error: expected declaration or statement at end of input
